<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Freway</string><!-- app名称 -->
    <!-- 第三方sdk -->
    <string name="app_id">965428893549865</string>
    <string name="call_back_url">app.ifreway.com/index.php</string>
    <!-- toast提示，弹出框 -->
    <string name="input_not_valid">Input is not valid</string><!-- 输入不合法 -->
    <string name="integer_limit">please enter an integer</string><!-- 只允许输入整数 -->
    <string name="gps_not_open">Your GPS seems to be disabled, do you want to enable it?</string><!-- 你的手机不支持蓝牙-->
    <string name="not_support_bluetooth">Your phone has no Bluetooth</string><!-- 你的手机不支持蓝牙-->
    <string name="not_supported_ble">Your phone has no Bluetooth low enengy</string><!-- 你的手机不支持低功耗蓝牙 -->
    <string name="bluetooth_not_connect">eBike Controller is disconnected</string><!--蓝牙没有链接  -->
    <string name="bluetooth_not_open">Bluetooth is closed</string><!-- 蓝牙没有打开 -->
    <string name="bluetooth_service_init_fail">Bluetooth initialization failed</string><!--蓝牙服务初始化失败  -->
    <string name="bluetooth_service_re_init">Bluetooth initialization,please standby</string><!-- 蓝牙重新初始，请稍候-->
    <string name="request_server_error">Server error</string><!--请求服务器异常  -->
    <string name="net_unavailable">Network is not available</string><!--网络不可用  -->
    <string name="old_password_can_not_null">old password can not be null</string><!-- 旧密码不能为空 -->
    <string name="new_password_can_not_null">new password can not be null</string><!--  新密码不能为空-->
    <string name="confirm_new_password_can_not_null">Please input new password</string><!--请输入新密码  -->
    <string name="old_password_enter_wrong">Old password error</string><!-- 旧密码错误 -->
    <string name="email_incorrect">Wrong Email</string><!-- 邮箱不正确-->
    <string name="confirm_password_not_match">Password does not match!</string><!-- 确认密码不匹配 -->
    <string name="email_can_not_be_null">Email can not be null</string><!--  邮箱不能为空-->
    <string name="username_can_not_be_null">Username can not be null</string><!--用户名不能为空  -->
    <string name="username_at_least_4_characters">User name must contain at least 4 characters</string><!-- 用户名至少4个字符 -->
    <string name="password_at_least_6_characters">Password must contain at least 6 characters</string><!-- 密码至少6个字符 -->
    <string name="password_can_not_be_null">Password can not be null</string><!-- 密码不能为空 -->
    <string name="confirm_password_can_not_be_null">Password can not be null</string><!-- 确认密码不能为空 -->
    <!-- ble -->
    <string name="scan">Scan</string><!-- 扫描 -->
    <string name="manul">Manual</string><!-- 手动 -->
    <string name="ble_connected">eBike Controller is connected</string><!-- 蓝牙已链接 -->
    <string name="ble_scan_compledted">eBike Controller scanning is complete</string><!--蓝牙扫描完成  -->
    <string name="ble_not_bind">eBike Controller is unbonded,check for bonding now?</string><!-- 蓝牙未绑定，现在要去绑定吗？ -->
    <string name="ble_not_connect">eBike Controller is disconnected,check for connecting now?</string><!-- 蓝牙未链接，现在要去链接蓝牙吗？ -->
    <string name="ble_lose">eBike Controller is disconnected,reconnecting now</string><!-- 蓝牙断开链接，正在重新链接中 -->
    <string name="ble_scan">eBike Controller scanning</string><!-- 扫描蓝牙 -->
    <!-- 通用 -->
    <string name="in_development">Under development</string><!-- 正在开发中 -->
    <string name="upload_travel_success">Distance uploaded successfully</string><!--  上传行程成功-->
    <string name="photo_upload_success">Photos uploaded successfully</string><!-- 图片上传成功 -->
    <string name="update_profile_success">Profile updated sucessfully</string><!--  更新个人简介成功-->
    <string name="cancel">Cancel</string><!-- 取消 -->
    <string name="english">English</string><!-- 英文 -->
    <string name="travel_save">To end the trip?</string><!-- 结束行程？ -->
    <string name="end_and_save">End&amp;Save</string><!-- 结束并保存 -->
    <string name="end_and_discard">End&amp;Discard</string><!-- 结束不保存 -->
    <string name="travel_too_short_not_save">Distance is too short,it will not be saved</string><!-- 行程过短，将不保存此行程 -->
    <string name="battery_connect_exception">Battery pack is disconnected,please check again</string><!-- 电池包链接异常，请检查 -->
    <string name="can_not_be_null">can not be empty</string><!-- 不能为空 -->
    <string name="login_cancel">cancel log in</string><!-- 登录取消 -->
    <string name="login_fail">Log in failure</string><!-- 登录失败 -->
    <string name="back">Back</string><!-- 返回 -->
    <string name="menu">Menu</string><!-- 菜单 -->
    <string name="home">Home</string><!-- 首页 -->
    <string name="ok">OK</string><!-- OK -->
    <string name="yes">Yes</string><!-- 是 -->
    <string name="no">No</string><!-- 否 -->
    <string name="unknown">UNKNOWN</string><!-- 未知 -->
    <!-- test -->
    <string name="test_text">Test</string>
    <string name="test_email">jack@gmail.com</string>
    <string name="test_value_float">10.5</string>
    <string name="test_value_percent">35%</string>
    <string name="test_value_2_mi">35mi</string>
    <string name="test_value_2">23</string>
    <string name="test_value_3">357</string>
    <string name="test_value_4">1200</string>
    <string name="test_value_time">00:00:00</string>
    <!-- ui -->
    <string name="welcome_title">Your intelligent riding assistant</string> <!-- freway标题 -->
    <string name="tip_wheel_value">wheel value setting</string><!-- 蓝牙设置 -->
    <string name="tip_ebike_setting">eBike Controller setting</string><!-- 蓝牙设置 -->
    <string name="tip_travel_stop">Click the flag or go to the trip</string><!-- 行程停止 提示-->
    <string name="tip_ebike_disconnect">eBike Controller disconnecting</string><!-- 蓝牙断开链接 -->
    <string name="tip_ebike_stop">Cycling has automatically stopped</string><!-- 行程自动停止 -->
    <string name="tip_sync_history">waiting for update local trip</string><!-- 行程自动停止 -->
    <string name="unbind_ebike">eBike Controller unbonding</string><!-- 解绑蓝牙 -->
    <string name="tip_unbind_ebike_success">eBike Controller unbonded successfully</string><!-- 解绑蓝牙成功 -->
    <string name="scan_ebike">eBike Controller scanning</string><!-- 扫描蓝牙设备 -->
    <string name="loading">Loading...</string><!-- 加载中…… -->
    <string name="email">Email</string><!--邮箱 -->
    <string name="password">Password</string><!-- 密码-->
    <string name="confirm_password">Confirm Password</string><!--确认密码 -->
    <string name="username">Username</string><!--用户名 -->
    <string name="sign_in">SIGN IN</string><!--登录 -->
    <string name="sign_up">SIGN UP</string><!--注册 -->
    <string name="sign_in_tip">Forgot password? or create an account</string>
    <string name="battery_left">LEFT</string><!-- 剩余-->
    <string name="mi">mi</string><!-- 这个单位是迈 -->
    <string name="m">m</string><!-- 这个单位是米 -->
    <string name="km">km</string>
    <string name="mph">mph</string>
    <string name="km_h">km/h</string>
    <string name="rpm">rpm</string>
    <string name="cal">Kcal</string>
    <string name="gear">GEAR</string>
    <string name="distance_unit_mph">mph</string>
    <string name="distance_unit_mi">km/h</string>
    <string name="distance">DISTANCE</string>
    <string name="avg_speed">AVG.SPEED</string>
    <string name="asl">ASL</string>
    <string name="cadence">CADENCE</string>
    <string name="day">DAY</string>
    <string name="night">NIGHT</string>
    <string name="battery_remaind_tip">Remainder Range</string>
    <string name="profile">Profile</string>
    <string name="name">Name</string>
    <string name="total_miles">TOTAL MILES</string>
    <string name="total_km">TOTAL KILOMETER</string>
    <string name="total_ride_time">TOTAL RIDE TIME</string>
    <string name="records">Records</string>
    <string name="grades">Grades</string>
    <string name="news">News</string>
    <string name="tutorial">Tutorial</string>
    <string name="settings">Settings</string>
    <string name="edit">Edit</string>
    <string name="nick_name">Nickname</string>
    <string name="gender">GENDER</string>
    <string name="age">AGE</string>
    <string name="height_cm">HEIGHT/CM</string>
    <string name="weight_kg">WEIGHT/KG</string>
    <string name="my_ebike">My eBike</string>
    <string name="wheel_value">Wheel</string>
    <string name="language">Language</string>
    <string name="unit_of_distance">Unit of Distance</string>
    <string name="version">Version</string>
    <string name="exit">EXIT</string>
    <string name="unit_distance_settings">Unit Distance Settings</string>
    <string name="unbind_ble_will_abandon">Cycling record will not be saved if you unbind the ebike, sure to unbind?</string>
    <string name="change_wheel_will_abandon">Cycling record will not be saved if you change the wheel, sure to change?</string>
    <string name="unbind">unbind</string>
    <string name="portrait_settings">Portrait Settings</string>
    <string name="album">Album</string>
    <string name="camera">Camera</string>
    <string name="searching_your_ebikt">Searching your eBike Controller</string><!--正在发现蓝牙设备…… -->
    <string name="confirm">Confirm</string>
    <string name="ebike_not_found_tip">eBike Controller can not be found,make sure your device is available</string><!-- 找不到蓝牙设备，请确保你的设备处理开启状态 -->
    <!-- APP升级 -->
    <string name="app_update">App Update</string><!-- APP升级 -->
    <string name="app_update_tip">A latest version is available,check for updates?</string><!-- 有新的版本可提供，想更新到最新版本吗？ -->
    <string name="app_update_force_tip">Latest version of this application is available,check for updates</string><!-- 有新的版本可提供，你必须更新应用到最新版本才能使用 -->
    <string name="start_download">Download complete,automatic updates</string><!-- 下载完成后，将自动更新 -->
    <string name="app_downloading">downloading</string><!-- 下载中 -->
    <string name="app_is_update">app is updating,please standby</string><!-- 应用正在更新中，请稍候 -->
    <string name="app_downloaded">Download complete</string><!-- 下载完成 -->
    <string name="app_updating">app is updating...</string><!-- 应用正在更新…… -->
    <string name="app_now_is_newly">This is the latest version</string><!-- 当前版本已是最新版本 -->
    <string name="complete">completed</string><!-- 完成 -->
    <string name="app_download_completed">Downlaod complete,ready to update</string><!-- 应用下载完成，准备更新 -->

</resources>