<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg" >

    <ImageView
        android:id="@+id/freway_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/sign_logo_marginTop"
        android:src="@drawable/freway_logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/freway_logo"
        android:orientation="vertical"
        style="@style/SignInputLayout"
        >

        <TextView
            android:id="@+id/sign_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            style="@style/SignTitleTv"/>

        <EditText
            android:id="@+id/sign_et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/sign_et_pic_email"
            android:drawableStart="@drawable/sign_et_pic_email"
            android:hint="@string/username"
            style="@style/SignInput"
            />

        <EditText
            android:id="@+id/sign_et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/sign_et_pic_key"
            android:drawableStart="@drawable/sign_et_pic_key"
            android:hint="@string/password"
            android:inputType="textPassword"
            style="@style/SignInput"
             />

        <TextView
            android:id="@+id/sign_tip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/sign_tip_maringVertical"
            android:layout_marginTop="@dimen/sign_tip_maringVertical"
            android:text="@string/sign_in_tip"
            android:textColor="@color/text_white_smoke"
            android:textSize="12sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/sign_tv_signin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_in"
                style="@style/SignButtonShort" 
                />

            <TextView
                android:id="@+id/sign_tv_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/sign_btn_spacing"
                android:layout_marginLeft="@dimen/sign_btn_spacing"
                android:text="@string/sign_up"
                style="@style/SignButtonShort"  />
        </LinearLayout>
    </LinearLayout>

    <ImageButton
        android:id="@+id/sign_btn_twitter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginRight="@dimen/sign_btn_third_margin_right"
        android:onClick="onSignInTwitter"
        android:src="@drawable/sign_btn_twitter" 
        style="@style/SignButtonThird"
        />

    <ImageButton
        android:id="@+id/sign_btn_facebook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/sign_btn_fb_twitter_spacing"
        android:layout_toLeftOf="@id/sign_btn_twitter"
        android:onClick="onSigninFacebook"
        android:src="@drawable/sign_btn_fb"
        style="@style/SignButtonThird"
         />
</RelativeLayout>