<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/nav_top_bar_color" >

    <TextView
        android:id="@+id/nav_top_tv_left"
        style="@style/NavTopBarButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:contentDescription="@string/back"
        android:drawableLeft="@drawable/back"
        android:drawableStart="@drawable/back"
        android:maxEms="6"
        android:text="@string/back" />

    <TextView
        android:id="@+id/nav_top_tv_title"
        style="@style/NavTopBarText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/nav_top_tv_left"
        android:layout_alignTop="@id/nav_top_tv_left"
        android:layout_centerHorizontal="true"
        android:gravity="center_vertical"
        android:maxEms="6"
        android:text="@string/menu" />


    <TextView
        android:id="@+id/nav_top_btn_right"
        style="@style/NavTopBarButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/nav_top_tv_left"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@id/nav_top_tv_left"
        android:drawablePadding="@dimen/nav_top_bar_btn_drawablePadding"
        android:text="@string/confirm" />
    
    <ProgressBar
        android:id="@+id/nav_loading"
        style="@android:style/Widget.ProgressBar.Small.Inverse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/nav_top_tv_left"
        android:layout_toLeftOf="@id/nav_top_btn_right"
        android:layout_toStartOf="@id/nav_top_btn_right"
        android:layout_alignTop="@id/nav_top_tv_left"
        android:gravity="center"
        android:visibility="gone"
        android:indeterminateDrawable="@drawable/dialog_loading" />

</RelativeLayout>