<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/model_night_view_background"
    android:orientation="vertical" >

    <include
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/view_top_bar_custom" />
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1"
        >
        <RelativeLayout 
	    style="@style/ProfileHeadPicLayout"
	    >
	    <com.freway.ebike.view.HeadPicView
	        android:id="@+id/profile_head_view"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:src="@drawable/profile_pic_temp"
	        />
	    
	</RelativeLayout>
	<LinearLayout 
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center_horizontal"
	    android:layout_margin="@dimen/profile_name_margin"
	    android:layout_below="@id/profile_head_view"
	    android:orientation="horizontal"
	    >
	    <ImageView 
	    android:id="@+id/profile_gender_pic"
	    android:layout_width="wrap_content"
	    android:layout_height="fill_parent"
	    android:src="@drawable/profile_icon_man"
	    />
	    <TextView 
	    android:id="@+id/profile_name"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/test_text"
	    style="@style/ProfileName"
	    />
	</LinearLayout>
    </LinearLayout>
	
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    >
	    <RelativeLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    style="@style/ProfileTravelCountLL"
	    >
	    <TextView 
	        android:id="@+id/profile_total_mileage_value"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        style="@style/ProfileTotalValue"
	        android:text="@string/test_value_4"
	        />
	    <TextView 
	        android:id="@+id/profile_total_mileage_title"
	        android:layout_below="@id/profile_total_mileage_value"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        style="@style/ProfileTotalUnit"
	        android:text="@string/total_miles"
	        />
	</RelativeLayout>
	 <RelativeLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_weight="1"
	   style="@style/ProfileTravelCountLL"
	    >
	    <TextView 
	        android:id="@+id/profile_total_time_value"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        style="@style/ProfileTotalValue"
	        android:text="@string/test_value_4"
	        />
	    <TextView 
	        android:id="@+id/profile_total_time_title"
	        android:layout_below="@id/profile_total_time_value"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        style="@style/ProfileTotalUnit"
	        android:text="@string/total_ride_time"
	        />
	</RelativeLayout>
	</LinearLayout>
	<ScrollView 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    >
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    >
	    <RelativeLayout 
	        android:id="@+id/profile_btn_records"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        style="@style/ProfileNavImageButtonLL"
	        >
	        <ImageView 
	            android:id="@+id/profile_icon_records"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_centerVertical="true"
	            android:layout_alignParentLeft="true"
	            android:src="@drawable/profile_icon_records_selector"
	            />
	        <TextView 
	            android:id="@+id/profile_tv_records"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            style="@style/ProfileNavText"
	            android:text="@string/records"
	            />
	        <ImageView 
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignParentRight="true"
	            android:layout_centerVertical="true"
	            android:src="@drawable/profile_icon_arrow_selector"
	            />
	    </RelativeLayout>
	     <RelativeLayout 
	        android:id="@+id/profile_btn_grades"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        style="@style/ProfileNavImageButtonLL"
	        >
	        <ImageView 
	            android:id="@+id/profile_icon_grades"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_centerVertical="true"
	            android:layout_alignParentLeft="true"
	            android:src="@drawable/profile_icon_grades_selector"
	            />
	        <TextView 
	            android:id="@+id/profile_tv_grades"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            style="@style/ProfileNavText"
	            android:text="@string/grades"
	            />
	        <ImageView 
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignParentRight="true"
	            android:layout_centerVertical="true"
	            android:src="@drawable/profile_icon_arrow_selector"
	            />
	    </RelativeLayout>
	     <RelativeLayout 
	        android:id="@+id/profile_btn_news"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        style="@style/ProfileNavImageButtonLL"
	        >
	        <ImageView 
	            android:id="@+id/profile_icon_news"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_centerVertical="true"
	            android:layout_alignParentLeft="true"
	            android:src="@drawable/profile_icon_news_selector"
	            />
	        <TextView 
	            android:id="@+id/profile_tv_news"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            style="@style/ProfileNavText"
	            android:text="@string/news"
	            />
	        <ImageView 
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignParentRight="true"
	            android:layout_centerVertical="true"
	            android:src="@drawable/profile_icon_arrow_selector"
	            />
	    </RelativeLayout>
	     <RelativeLayout 
	        android:id="@+id/profile_btn_tutorial"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        style="@style/ProfileNavImageButtonLL"
	        >
	        <ImageView 
	            android:id="@+id/profile_icon_tutorial"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_centerVertical="true"
	            android:layout_alignParentLeft="true"
	            android:src="@drawable/profile_icon_tutorial_selector"
	            />
	        <TextView 
	            android:id="@+id/profile_tv_tutorial"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            style="@style/ProfileNavText"
	            android:text="@string/tutorial"
	            />
	        <ImageView 
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignParentRight="true"
	            android:layout_centerVertical="true"
	            android:src="@drawable/profile_icon_arrow_selector"
	            />
	    </RelativeLayout>
	</LinearLayout>
	</ScrollView>
</LinearLayout>